2011-04-18  Ingo Renner  <ingo@typo3.org>

	* Added initial code generated with kickstarter
	* Added locallang.xml